6-30-19
- "thread specific" software breakpoints
- fixed up signal handling

6-29-19
- use rl_display_match_list in documentation.c
- do away with repairing the cmd_args_t struct and just pass a copy to the
audit functions

6-28-19
- revert back to replying to exceptions when the user issues the continue
command
- fix up signal handle regex

6-27-19
- use pipes for more efficient I/O
- fixed up strext.c concat functions
- take advanage of libhistory to manage the history file
- set non-thread specific breakpoints on new threads

6-22-19
- morphed register float and register gen commands into register view
- get rid of NULL checks before calling free
- utilize readline's alternate interface to stop busy waiting and avoid race
condition in rl_printf

6-21-19
- thread specific breakpoints and watchpoints finished
- corrected excessive rl_printf timeout timer

6-20-19
- iosdbg remembers command history between sessions
- done implementing thread safe iteration for debuggee breakpoints,
watchpoints, and threads
- fixed up ops_threadupdate logic

6-19-19
- new thread to update debuggee threads every second or right when one goes
away
- finished thread specific breakpoints
- implemented thread-safe way to iterate through debuggee's threads,
still need to do breakpoints and watchpoints
- working on fixing up ops_threadupdate logic

6-18-19
- shutdown threads upon detach
- rename thread.c functions
- prepare_and_call_cmdfunc shows cmd documentation on syntax error again
- working on refactoring breakpoint.c and watchpoint.c
- working on thread specific watchpoints

6-17-19
- fix disassemble and compiler error

6-16-19
- routinely update thread specific breakpoints

6-15-19
- wrote functions to get and set register values

6-14-19
- somehow, for a little over three months after getting rid of
catch_mach_exception_raise, I forgot to reimplement the case where
an exception is not caused by a soft signal, single step, breakpoint, or