@@ -10,12 +10,14 @@ void audit_breakpoint_set(struct cmd_args_t *, const char **, char **);
 void audit_continue(struct cmd_args_t *, const char **, char **);
 void audit_detach(struct cmd_args_t *, const char **, char **);
 void audit_disassemble(struct cmd_args_t *, const char **, char **);
+void audit_evaluate(struct cmd_args_t *, const char **, char **);
 void audit_examine(struct cmd_args_t *, const char **, char **);
 void audit_kill(struct cmd_args_t *, const char **, char **);
 void audit_memory_find(struct cmd_args_t *, const char **, char **);
 void audit_memory_write(struct cmd_args_t *, const char **, char **);
 void audit_register_view(struct cmd_args_t *, const char **, char **);
 void audit_register_write(struct cmd_args_t *, const char **, char **);
+void audit_signal_deliver(struct cmd_args_t *, const char **, char **);
 void audit_stepi(struct cmd_args_t *, const char **, char **);
 void audit_thread_list(struct cmd_args_t *, const char **, char **);
 void audit_thread_select(struct cmd_args_t *, const char **, char **);
