@@ -3,14 +3,25 @@
 
 #include "argparse.h"
 
+enum cmd_error_t cmdfunc_signal_deliver(struct cmd_args_t *, int, char **, char **);
 enum cmd_error_t cmdfunc_signal_handle(struct cmd_args_t *, int, char **, char **);
 
 static const char *SIGNAL_COMMAND_DOCUMENTATION =
     "'signal' describes the group of commands which deal with signals.\n";
 
+static const char *SIGNAL_DELIVER_COMMAND_DOCUMENTATION =
+    "Deliver an arbitrary signal to the debuggee.\n"
+    "This command has one mandatory argument and no optional arguments.\n"
+    "\nMandatory arguments:\n"
+    "\tsignal\n"
+    "\t\tThe signal to deliver.\n"
+    "\nSyntax:\n"
+    "\tsignal deliver signal\n"
+    "\n";
+
 static const char *SIGNAL_HANDLE_COMMAND_DOCUMENTATION =
     "Change how iosdbg will handle signals sent from the OS to the debuggee.\n"
-    "This command has no mandatory arguments and four optional arguments:\n"
+    "This command has no mandatory arguments and four optional arguments.\n"
     "\nOptional arguments:\n"
     "\tsignals\n"
     "\t\tThe signal(s) you're updating.\n"
@@ -29,6 +40,9 @@ static const char *SIGNAL_HANDLE_COMMAND_DOCUMENTATION =
 /*
  * Regexes
  */
+static const char *SIGNAL_DELIVER_COMMAND_REGEX =
+    "^(?<signal>[^\\s]+)";
+
 static const char *SIGNAL_HANDLE_COMMAND_REGEX =
     "^(?<signals>[\\w\\s]+)\\s+"
     "--?(n(otify)?)\\s+(?<notify>1|0|true|false)\\s+"
@@ -38,6 +52,9 @@ static const char *SIGNAL_HANDLE_COMMAND_REGEX =
 /*
  * Regex groups
  */
+static const char *SIGNAL_DELIVER_COMMAND_REGEX_GROUPS[MAX_GROUPS] =
+    { "signal" };
+
 static const char *SIGNAL_HANDLE_COMMAND_REGEX_GROUPS[MAX_GROUPS] =
     { "signals", "notify", "pass", "stop" };
 
